# fnc

./: README.md  pyproject.toml
src/fnc/: __init__.py  grid.py  info.py  misc.py  numeric.py  plot.py
src/fnc/monte_carlo/: __init__.py  integrate.py
src/fnc/monte_carlo/markov_chain/: __init__.py  _metropolis_hastings.py  diagnosis.py  plot.py
src/fnc/number_theory/: __init__.py  continued_fraction.py  core.py  farey.py  irrationals.py  primes.py  rsa.py
src/fnc/stats/: __init__.py  _distributions.py  _misc.py  dkl.py  kolmogorov_smirnov.py
src/fnc/utils/: __init__.py  bash.py  decorators.py  human_readable.py  lazy.py  pool.py  store.py  types.py
tests/: tests.py
