[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fnc"
version = "2.0.0"

requires-python = ">= 3.11"
dependencies = ["numpy",
                "numba",
                "matplotlib",
                "humanize",
                "scipy",
                "tqdm",
                "termcolor"]

authors = [{name = "Carles Garcia Palau", email = "cgpalau@sjtu.edu.cn"}]
description = "General purpose functions"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["astrophysics", "galactic dynamics"]
classifiers = ["Intended Audience :: Science/Research",
               "Topic :: Scientific/Engineering :: Astronomy",
               "Topic :: Scientific/Engineering :: Physics",
               "License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3.13",
               "Operating System :: POSIX :: Linux"]
